--- a/src/app/components/adminpage/adminpage.component.css
+++ b/src/app/components/adminpage/adminpage.component.css
@@ -144,6 +144,9 @@ a {
   transform: translateY(-50%);
 }
 
+.mat-spinner-color::ng-deep circle{
+  stroke: #56baed !important;
+  }
 
 
 .fadeInDown {
