--- a/src/app/dialogs/email-dialog/email-dialog.component.html
+++ b/src/app/dialogs/email-dialog/email-dialog.component.html
@@ -41,7 +41,7 @@
 
         <div mat-dialog-action>
             <button mat-button (click)="close()" class="item2">Close</button>
-            <button mat-button type="submit" (click)="send()" [disabled]="!formControl.valid" class="item2">Send</button>
+            <button mat-button type="submit" (click)="send()" [disabled]="!formControl.valid" class="item2">Ok</button>
         </div>
     </form>
 </div>
