--- a/src/app/components/feedback/feedback.component.html
+++ b/src/app/components/feedback/feedback.component.html
@@ -37,7 +37,7 @@
     </mat-progress-spinner>
   </div>
 
-  <mat-paginator *ngIf="dataSource" [pageIndex]="page-1" [pageSizeOptions]="[5, 10, 25, 100]" [length]="length" (page)="loadDataOnPageEvent($event)">
+  <mat-paginator *ngIf="length > 0" [pageIndex]="page-1" [pageSizeOptions]="[5, 10, 25, 100]" [length]="length" (page)="loadDataOnPageEvent($event)">
   </mat-paginator>
   
   <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No feedbacks.</mat-toolbar>
