Dodato da ikonica za dodavanje slike feedbacku nestaje nakon sto se doda slika

--- a/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
+++ b/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
@@ -28,7 +28,7 @@
     </div>
 
 
-    <form [formGroup]="form" (ngSubmit)="submitForm()">
+    <form [formGroup]="form" (ngSubmit)="submitForm()" *ngIf="!imageUploaded">
       <input type="file" id="inputFile" (change)="uploadFile($event)" accept="image/*" capture="camera"
         fromControlName="file" required hidden>
       <label style="margin-bottom:5%">Take photo:</label>
