--- a/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
+++ b/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
@@ -28,12 +28,12 @@
     </div>
 
 
-    <form [formGroup]="form" (ngSubmit)="submitForm()" *ngIf="!imageUploaded">
+    <form [formGroup]="form" (ngSubmit)="submitForm()">
       <input type="file" id="inputFile" (change)="uploadFile($event)" accept="image/*" capture="camera"
         fromControlName="file" required hidden>
       <label style="margin-bottom:5%">Take photo:</label>
 
-      <label for="inputFile" class="browseFile"> <img src="assets\photoicon.png" width="10%" height="10%" alt="PhotoIcon"/></label>
+      <label  for="inputFile" class="browseFile"> <img src="assets\photoicon.png" width="10%" height="10%" alt="PhotoIcon"/></label>
     </form>
     <div *ngIf="imageUploaded">
       <p>Photo is uploaded.</p>
