--- a/src/app/components/object/object.component.html
+++ b/src/app/components/object/object.component.html
@@ -1,4 +1,4 @@
-<div class="container mat-elevation-z8 font">
+<div class="container font">
   <div class="adr-name-search">
 
     <!-- <h4>Enter address or object name</h4>
@@ -62,60 +62,62 @@
   <em class="fa-solid fa-circle-chevron-up fa-1x" (click)="showDetailSearch()" *ngIf="detailSearch == true"></em> -->
     </div>
 
-    <mat-table #table class="table" [dataSource]="dataSource" matSort class="mat-cell" *ngIf="dataSource || isAdmin">
+    <div class="table mat-elevation-z8" *ngIf="dataSource || isAdmin">
+      <mat-table #table class="table" [dataSource]="dataSource" matSort class="mat-cell">
 
-      <ng-container matColumnDef="objectName">
-        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext">Name</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{ row.objectName }}</mat-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="address">
-        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext">Address</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{ row.address }}</mat-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="actions">
-        <mat-header-cell *matHeaderCellDef>
-          <button mat-icon-button color="primary" *ngIf="isAdmin">
-            <mat-icon (click)="openDialog(1)" class="whitetext">add</mat-icon>
-          </button>
-        </mat-header-cell>
-        <mat-cell *matCellDef="let row; let i=index">
-          <button color="primary" mat-icon-button color="primary" *ngIf="isAdmin"
-            (click)="openUpdateDialog(4,row)">
-            <mat-icon area-label="Info">info</mat-icon>
-          </button>
-
-          <button mat-icon-button color="primary" *ngIf="isAdmin">
-            <mat-icon area-label="Edit" (click)="openUpdateDialog(2,row)">
-              edit </mat-icon>
-          </button>
-
-          <button mat-icon-button color="primary" *ngIf="isAdmin">
-            <mat-icon area-label="Delete"
-              (click)="openDialog(3,row.objectName,row.objectIdCompany,row.objectIdRetail,row.address,row.city,row.retailerName,row.objectFormat,row.requisitionDays,row.merchandiserRevisionDays)">
-              delete </mat-icon>
-          </button>
-
-          <button style="color: #56baed;background-color:white;" mat-button color="primary" *ngIf="!isAdmin"
-            (click)="openUpdateDialog(4,row)">
-            <!-- Details -->
-            <mat-icon area-label="Info">info</mat-icon>
-          </button>
-          <button class="choose-btn" mat-button color="primary" *ngIf="!isAdmin"
-            (click)="getUnfinishedObjectStoreCheck(row.objectName, row.objectIdCompany)">
-            Start
-            <mat-icon area-label="Open">open_in_new</mat-icon>
-          </button>
-
-        </mat-cell>
-      </ng-container>
-      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns"></mat-row>
-    </mat-table>
-    <mat-paginator *ngIf="dataSource" [pageIndex]="page-1" [pageSizeOptions]="[5, 10, 25, 100]" [length]="length"
-      (page)="loadDataOnPageEvent($event)">
-    </mat-paginator>
+        <ng-container matColumnDef="objectName">
+          <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext">Name</mat-header-cell>
+          <mat-cell *matCellDef="let row">{{ row.objectName }}</mat-cell>
+        </ng-container>
+  
+        <ng-container matColumnDef="address">
+          <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext">Address</mat-header-cell>
+          <mat-cell *matCellDef="let row">{{ row.address }}</mat-cell>
+        </ng-container>
+  
+        <ng-container matColumnDef="actions">
+          <mat-header-cell *matHeaderCellDef>
+            <button mat-icon-button color="primary" *ngIf="isAdmin">
+              <mat-icon (click)="openDialog(1)" class="whitetext">add</mat-icon>
+            </button>
+          </mat-header-cell>
+          <mat-cell *matCellDef="let row; let i=index">
+            <button color="primary" mat-icon-button color="primary" *ngIf="isAdmin"
+              (click)="openUpdateDialog(4,row)">
+              <mat-icon area-label="Info">info</mat-icon>
+            </button>
+  
+            <button mat-icon-button color="primary" *ngIf="isAdmin">
+              <mat-icon area-label="Edit" (click)="openUpdateDialog(2,row)">
+                edit </mat-icon>
+            </button>
+  
+            <button mat-icon-button color="primary" *ngIf="isAdmin">
+              <mat-icon area-label="Delete"
+                (click)="openDialog(3,row.objectName,row.objectIdCompany,row.objectIdRetail,row.address,row.city,row.retailerName,row.objectFormat,row.requisitionDays,row.merchandiserRevisionDays)">
+                delete </mat-icon>
+            </button>
+  
+            <button style="color: #56baed;background-color:white;" mat-button color="primary" *ngIf="!isAdmin"
+              (click)="openUpdateDialog(4,row)">
+              <!-- Details -->
+              <mat-icon area-label="Info">info</mat-icon>
+            </button>
+            <button class="choose-btn" mat-button color="primary" *ngIf="!isAdmin"
+              (click)="getUnfinishedObjectStoreCheck(row.objectName, row.objectIdCompany)">
+              Start
+              <mat-icon area-label="Open">open_in_new</mat-icon>
+            </button>
+  
+          </mat-cell>
+        </ng-container>
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns"></mat-row>
+      </mat-table>
+      <mat-paginator *ngIf="length > 0" [pageIndex]="page-1" [pageSizeOptions]="[5, 10, 25, 100]" [length]="length"
+        (page)="loadDataOnPageEvent($event)">
+      </mat-paginator>
+    </div>
 
     <div *ngIf="isLoading"
       style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed;">
@@ -123,6 +125,6 @@
       </mat-progress-spinner>
     </div>
 
-    <mat-toolbar color="#56baed" *ngIf="noData">No objects</mat-toolbar>
+    <mat-toolbar class="toolbar" *ngIf="noData">No objects</mat-toolbar>
 
   </div>
