--- a/src/app/components/choose-object/choose-object.component.css
+++ b/src/app/components/choose-object/choose-object.component.css
@@ -85,7 +85,7 @@
     line-height: 50px;
     text-align: center;
     border-radius: 10px;
-    font-size: 15px;
+    font-size: 80%;
     border: 2px solid #39ace7;
     cursor: pointer;
     margin: 0 auto;
