--- a/src/app/components/feedback/feedback.component.css
+++ b/src/app/components/feedback/feedback.component.css
@@ -48,7 +48,7 @@ h1{
   line-height: 20px;
   text-align: center;
   border-radius: 10px;
-  font-size: 15px;
+  font-size: 80%;
   border: 2px solid #39ace7;
   cursor: pointer;
   margin:  auto;
