--- a/src/app/components/object/object.component.css
+++ b/src/app/components/object/object.component.css
@@ -185,7 +185,7 @@ table{
   line-height: 50px;
   text-align: center;
   border-radius: 10px;
-  font-size: 15px;
+  font-size: 80%;
   border: 2px solid #39ace7;
   cursor: pointer;
   margin: 0 auto;
