--- a/src/app/components/resolved-feedback/resolved-feedback.component.css
+++ b/src/app/components/resolved-feedback/resolved-feedback.component.css
@@ -51,7 +51,7 @@
   line-height: 50px;
   text-align: center;
   border-radius: 10px;
-  font-size: 20px;
+  font-size: 80%;
   border: 2px solid #39ace7;
   cursor: pointer;
   margin: 0 auto;
