--- a/src/app/components/store-check/store-check.component.css
+++ b/src/app/components/store-check/store-check.component.css
@@ -53,7 +53,7 @@ a {
     line-height: 50px;
     text-align: center;
     border-radius: 10px;
-    font-size: 20px;
+    font-size: 80%;
     font-family:sans-serif;
     border: 2px solid #39ace7;
     cursor: pointer;
