--- a/src/app/components/store-check/store-check.component.css
+++ b/src/app/components/store-check/store-check.component.css
@@ -35,7 +35,7 @@ a {
     text-align: center;
     border-radius: 10px;
     font-family:sans-serif;
-    font-size: 20px;
+    font-size: 80%;
     font-weight:bold;
     border: 2px solid #39ace7;
     cursor: pointer;
