--- a/src/app/components/choose-object/choose-object.component.html
+++ b/src/app/components/choose-object/choose-object.component.html
@@ -10,13 +10,15 @@
         <div class="search-object">
             <input class="search-input" type="text" placeholder="Search object" *ngIf="objects.length > 0">
             <app-object [workModel]="workModel" [isAdmin]="false"></app-object>
-            <button matSuffix mat-button class="item3" (click)="openDialog()" *ngIf="!resolveFeedbacks && storeCheck">Finish StoreCheck</button>
+            <!-- <button matSuffix mat-button class="item3" (click)="openDialog()" *ngIf="!resolveFeedbacks && storeCheck">Finish StoreCheck</button> -->
+            <button mat-stroked-button color="primary" class="mat-btn" (click)="openDialog()" *ngIf="!resolveFeedbacks && storeCheck">Finish StoreCheck</button>
         </div>
 
         <div class="fadeIn third">
-            <button matSuffix mat-button class="item2" (click)="exit()">
+            <!-- <button matSuffix mat-button class="item2" (click)="exit()">
                 Exit
-            </button>
+            </button> -->
+            <button mat-stroked-button color="primary" class="mat-btn" (click)="exit()">Exit</button>
         </div>
     </div>
 </div>
