--- a/src/app/components/object/object.component.html
+++ b/src/app/components/object/object.component.html
@@ -51,8 +51,9 @@
         </div>
 
         <div class="menu-btn">
-          <button matSuffix mat-button class="item2" (click)="loadData(false)">Search <mat-icon>search</mat-icon>
-            </button>
+          <!-- <button matSuffix mat-button class="item2" (click)="loadData(false)">Search <mat-icon>search</mat-icon>
+            </button> -->
+            <button mat-stroked-button color="primary" class="mat-btn" (click)="loadData(false)">Search <mat-icon>search</mat-icon></button>
         </div>
         <!--bila klasa item3-->
 
