--- a/src/app/components/choose-object/choose-object.component.css
+++ b/src/app/components/choose-object/choose-object.component.css
@@ -245,13 +245,17 @@ a {
   animation-delay: 1s;
 }
 
+.btn-group {
+  margin-top: 40px;
+}
+
 .mat-btn {
   color: #39ace7;
   border-color: #39ace7;
   border-width: 2px;
   border-radius: 10px;
   width: 150px;
-  margin: 10px;
+  margin: 20px;
   font-size: 15px;
   padding: 5px;
 }
