mat buttons u choose object, feedback i sc page

--- a/src/app/components/feedback/feedback.component.css
+++ b/src/app/components/feedback/feedback.component.css
@@ -167,3 +167,13 @@ h1{
   text-align: left;
 }
 
+.mat-btn {
+  color: #39ace7;
+  border-color: #39ace7;
+  border-width: 2px;
+  border-radius: 10px;
+  width: 150px;
+  margin: 20px;
+  font-size: 15px;
+  padding: 5px;
+}
