--- a/src/app/components/resolved-feedback/resolved-feedback.component.css
+++ b/src/app/components/resolved-feedback/resolved-feedback.component.css
@@ -1,5 +1,6 @@
 .container {
   margin-top: 5%;
+  text-align: center;
 }
 
 
@@ -303,4 +304,15 @@ mat-header-cell:nth-child(5) {
   hyphens: auto;
 
   text-align: left;
+}
+
+.mat-btn {
+  color: #39ace7;
+  border-color: #39ace7;
+  border-width: 2px;
+  border-radius: 10px;
+  width: 150px;
+  margin: 20px;
+  font-size: 15px;
+  padding: 5px;
 }
