--- a/src/app/components/store-check/store-check.component.css
+++ b/src/app/components/store-check/store-check.component.css
@@ -26,42 +26,42 @@ a {
 }
 
 .item {
-    background-color: #39ace7;
-    color: #fff;
-    width: 400px;
-    max-width: 90%;
-    height: 100px;
-    line-height: 100px;
-    text-align: center;
-    border-radius: 10px;
-    font-family:sans-serif;
-    font-size: 80%;
-    font-weight:bold;
-    border: 2px solid #39ace7;
-    cursor: pointer;
-    margin: auto;
-    box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.3);
+  background-color: #39ace7;
+  color: #fff;
+  width: 400px;
+  max-width: 90%;
+  height: 100px;
+  line-height: 100px;
+  text-align: center;
+  border-radius: 10px;
+  font-family:sans-serif;
+  font-size: 20px;
+  font-weight:bold;
+  border: 2px solid #39ace7;
+  cursor: pointer;
+  margin: auto;
+  box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.3);
 
 
 }
 
 .item2{
-    background-color: white;
-    color: #39ace7;
-    width: 100px;
-    height: 50px;
-    line-height: 50px;
-    text-align: center;
-    border-radius: 10px;
-    font-size: 80%;
-    font-family:sans-serif;
-    border: 2px solid #39ace7;
-    cursor: pointer;
-    position: relative;
-    bottom: 1;
-    margin: auto;
+  background-color: white;
+  color: #39ace7;
+  width: 100px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  border-radius: 10px;
+  font-size: 20px;
+  font-family:sans-serif;
+  border: 2px solid #39ace7;
+  cursor: pointer;
+  position: relative;
+  bottom: 1;
+  margin: auto;
 
-    box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.3);
 
 }
 
