--- a/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
+++ b/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
@@ -29,11 +29,10 @@
 
 
     <form [formGroup]="form" (ngSubmit)="submitForm()" *ngIf="!imageUploaded">
-      <input type="file" id="inputFile" (change)="uploadFile($event)" accept="image/*" capture="camera"
-        fromControlName="file" required hidden>
-      <label style="margin-bottom:5%">Take photo:</label>
 
-      <label for="inputFile" class="browseFile"> <img src="assets\photoicon.png" width="10%" height="10%" alt="PhotoIcon"/></label>
+      <label style="margin-bottom:5%">Take photo:</label>
+      <input type="file" id="inputFile" (change)="uploadFile($event)" accept="image/*" capture="camera"
+      fromControlName="file" required>
     </form>
     <div *ngIf="imageUploaded">
       <p>Photo is uploaded.</p>
