--- a/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
+++ b/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
@@ -34,6 +34,13 @@
       </mat-form-field>
     </div>
 
+    <div class="form">
+      <mat-form-field>
+        <input matInput [(ngModel)]="data.usernameResolve" name="usernameResolve:" [disabled]="true"
+          required />
+      </mat-form-field>
+    </div>
+
     <form [formGroup]="form" *ngIf="resolveFeedbacks" (ngSubmit)="submitForm()">
       <input id="inputFile" type="file" (change)="uploadFile($event)" accept="image/*" capture="camera" fromControlName="file"  required hidden>
       <label>Take photo:</label>
