material card za grafike

--- a/src/app/charts/number-card-chart/number-card-chart.component.html
+++ b/src/app/charts/number-card-chart/number-card-chart.component.html
@@ -1,3 +1,7 @@
-<ngx-charts-number-card [view]="view" [scheme]="colorScheme" [results]="result" [cardColor]="cardColor"
-    [textColor]="textColor" (select)="onSelect($event)">
-</ngx-charts-number-card>
+<!-- <mat-card class="card">
+    <mat-card-content> -->
+        <ngx-charts-number-card [view]="view" [scheme]="colorScheme" [results]="single" [cardColor]="cardColor"
+            [textColor]="textColor" (select)="onSelect($event)">
+        </ngx-charts-number-card>
+    <!-- </mat-card-content>
+</mat-card> -->
