--- a/src/app/charts/advanced-pie-chart/advanced-pie-chart.component.html
+++ b/src/app/charts/advanced-pie-chart/advanced-pie-chart.component.html
@@ -1,11 +1,8 @@
-<ngx-charts-advanced-pie-chart
-  [view]="view"
-  [scheme]="colorScheme"
-  [results]="result"
-  [gradient]="gradient"
-  [label]="label"
-  (select)="onSelect($event)"
-  (activate)="onActivate($event)"
-  (deactivate)="onDeactivate($event)"
-  >
-</ngx-charts-advanced-pie-chart>
+<mat-card>
+  <mat-card-title>Feedbacks by category</mat-card-title>
+  <mat-card-content>
+    <ngx-charts-advanced-pie-chart [view]="view" [scheme]="colorScheme" [results]="result" [gradient]="gradient"
+      [label]="label" (select)="onSelect($event)" (activate)="onActivate($event)" (deactivate)="onDeactivate($event)">
+    </ngx-charts-advanced-pie-chart>
+  </mat-card-content>
+</mat-card>
