--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -37,7 +37,7 @@
     </mat-sidenav>
     <mat-sidenav-content class="sidenav-content">
         <div class="dashboard" *ngIf="flag === 1">
-            <mat-grid-list cols="1" rowHeight="200px">
+            <!-- <mat-grid-list cols="1" rowHeight="200px">
                 <mat-grid-tile class="grid-title">
                     <mat-card class="card">
                         <mat-card-content>
@@ -64,8 +64,55 @@
                         </mat-card-content>
                     </mat-card>
                 </mat-grid-tile>
+            </mat-grid-list> -->
+
+
+            <!-- <mat-grid-list cols="4" rowHeight="200px">
+                <mat-grid-tile class="test-grid-title">
+                    <mat-card>
+                        <mat-card-content>1</mat-card-content>
+                    </mat-card>
+                </mat-grid-tile>
+                <mat-grid-tile class="test-grid-title">
+                    <mat-card>
+                        <mat-card-content>2</mat-card-content>
+                    </mat-card>
+                </mat-grid-tile>
+                <mat-grid-tile class="test-grid-title">
+                    <mat-card>
+                        <mat-card-content>3</mat-card-content>
+                    </mat-card>
+                </mat-grid-tile>
+                <mat-grid-tile class="test-grid-title">
+                    <mat-card>
+                        <mat-card-content>4</mat-card-content>
+                    </mat-card>
+                </mat-grid-tile>
+
+                <mat-grid-tile class="test-grid-title" colspan="2">
+                    <mat-card>
+                        <mat-card-content>5</mat-card-content>
+                    </mat-card>
+                </mat-grid-tile>
+                <mat-grid-tile class="test-grid-title" colspan="2">
+                    <mat-card>
+                        <mat-card-content>6</mat-card-content>
+                    </mat-card>
+                </mat-grid-tile>
+            </mat-grid-list> -->
+
+            <mat-grid-list rowHeight="200px" cols="12">
+                <mat-grid-tile colspan="12">
+                </mat-grid-tile>
+                <mat-grid-tile class="test-grid-title" colspan="5" rowspan="2">
+                    <app-vertical-bar-chart></app-vertical-bar-chart>
+                </mat-grid-tile>
+                <mat-grid-tile class="test-grid-title" colspan="7" rowspan="2">
+                    <app-advanced-pie-chart></app-advanced-pie-chart>
+                </mat-grid-tile>
             </mat-grid-list>
         </div>
+
         <app-user *ngIf="flag === 2"></app-user>
         <app-object *ngIf="flag === 3"></app-object>
         <app-retailer *ngIf="flag === 4"></app-retailer>
