--- a/src/app/components/resolved-feedback/resolved-feedback.component.html
+++ b/src/app/components/resolved-feedback/resolved-feedback.component.html
@@ -1,8 +1,11 @@
 <div class="container font fadeInDown">
 
-  <div class="fadeIn first header">
-    <h1>Resolved feedbacks</h1>
-  </div>
+  <div class="header fadeIn first">
+
+    <img src="assets\StoreCheckIcon3.png" alt="SC icon" width="80" height="80" style="float:left;">
+    <h2 style="height:80px;"> <span>Resolved Feedbacks</span> </h2>
+
+</div>
   <div class="fadeIn second">
     <mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
 
