--- a/src/app/components/resolved-feedback/resolved-feedback.component.css
+++ b/src/app/components/resolved-feedback/resolved-feedback.component.css
@@ -32,7 +32,16 @@
   color:#56baed;
  }
 
-
+ .header {
+  text-align: center;
+  height: 80px;
+  background-color: #56baed;
+  color: #fff;
+  line-height: 80px;
+  margin-top: -5%;
+  margin-bottom: 5%;
+  width: 100%;
+}/*
 .header {
   text-align: center;
   height: 100px;
@@ -40,7 +49,7 @@
   color: #fff;
   line-height: 100px;
   margin-top: -5%;
-}
+}*/
 
 
 
