--- a/src/app/charts/advanced-pie-chart/advanced-pie-chart.component.html
+++ b/src/app/charts/advanced-pie-chart/advanced-pie-chart.component.html
@@ -1,8 +1,5 @@
-<mat-card>
-  <mat-card-title>Feedbacks by category</mat-card-title>
-  <mat-card-content>
-    <ngx-charts-advanced-pie-chart [view]="view" [scheme]="colorScheme" [results]="result" [gradient]="gradient"
-      [label]="label" (select)="onSelect($event)" (activate)="onActivate($event)" (deactivate)="onDeactivate($event)">
-    </ngx-charts-advanced-pie-chart>
-  </mat-card-content>
-</mat-card>
+<div #containerRef class="card-body">
+  <ngx-charts-advanced-pie-chart [view]="[containerRef.offsetWidth, containerRef.offsetHeight]" [scheme]="colorScheme" [results]="single" [gradient]="gradient"
+    [label]="label" (select)="onSelect($event)" (activate)="onActivate($event)" (deactivate)="onDeactivate($event)">
+  </ngx-charts-advanced-pie-chart>
+</div>
