--- a/src/app/charts/vertical-bar-chart/vertical-bar-chart.component.css
+++ b/src/app/charts/vertical-bar-chart/vertical-bar-chart.component.css
@@ -1,3 +1,33 @@
-.card {
+.card-body {
+    width: 600px;
     height: 300px;
+    /* background-color: green; */
+}
+
+@media screen and (max-width: 1200px) {
+    .card-body {
+        width: 500px;
+        /* background-color: yellow; */
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .card-body {
+        width: 400px;
+        /* background-color: red; */
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .card-body {
+        width: 600px;
+        /* background-color: blue; */
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .card-body {
+        width: 400px;
+        /* background-color: brown; */
+    }
 }
