--- a/src/app/charts/vertical-bar-chart/vertical-bar-chart.component.html
+++ b/src/app/charts/vertical-bar-chart/vertical-bar-chart.component.html
@@ -1,10 +1,7 @@
-<mat-card class="card">
-    <mat-card-title>Vertical Bar Chart</mat-card-title>
-    <mat-card-content>
-            <ngx-charts-bar-vertical [view]="view" [scheme]="colorScheme" [results]="result" [gradient]="gradient"
-                [xAxis]="showXAxis" [yAxis]="showYAxis" [legend]="showLegend" [showXAxisLabel]="showXAxisLabel"
-                [showYAxisLabel]="showYAxisLabel" [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel"
-                (select)="onSelect($event)">
-            </ngx-charts-bar-vertical>
-    </mat-card-content>
-</mat-card>
+<div #containerRef class="card-body">
+    <ngx-charts-bar-vertical [view]="[containerRef.offsetWidth, containerRef.offsetHeight]" [scheme]="colorScheme"
+        [results]="single" [gradient]="gradient" [xAxis]="showXAxis" [yAxis]="showYAxis" [legend]="showLegend"
+        [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel" [xAxisLabel]="xAxisLabel"
+        [yAxisLabel]="yAxisLabel" (select)="onSelect($event)">
+    </ngx-charts-bar-vertical>
+</div>
