--- a/src/app/components/sidenav/sidenav.component.css
+++ b/src/app/components/sidenav/sidenav.component.css
@@ -2,6 +2,15 @@
     background-color: #56baed;
 }
 
+.example-spacer {
+    flex: 1 1 auto;
+}
+
+.logout-btn {
+    border-color: #fff;
+    border-width: 2px;
+}
+
 .sidenav-container {
     position: absolute;
     top: 60px;
@@ -22,30 +31,4 @@
 .nav-icon {
     margin-right: 20px;
     color: #56baed;
-}
-
-.row {
-    display: flex;
-}
-
-.card {
-    max-width: 100%;
-    max-height: 100%;
-    /* height: 500px; */
-}
-
-.grid-title {
-    /* background-color: red; */
-}
-
-.footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
-
-
-.test-grid-title {
-    /* background-color: red; */
 }
